--- a/package.json
+++ b/package.json
@@ -3,23 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.19",
     "@chakra-ui/react": "^2.7.1",
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
+    "@hookform/error-message": "^2.0.1",
+    "@hookform/resolvers": "^3.1.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^14.1.0",
     "@types/jest": "^28.1.1",
     "@types/node": "^12.0.0",
     "@types/react": "^18.0.9",
+    "@types/react-datepicker": "^4.11.2",
     "@types/react-dom": "^18.0.4",
+    "@types/uuid": "^9.0.2",
+    "axios": "^1.4.0",
     "framer-motion": "^6.2.9",
     "react": "^18.1.0",
+    "react-datepicker": "^4.16.0",
     "react-dom": "^18.1.0",
+    "react-hook-form": "^7.45.1",
     "react-icons": "^3.0.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.6.3",
-    "web-vitals": "^2.1.4"
+    "uuid": "^9.0.0",
+    "web-vitals": "^2.1.4",
+    "yup": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
