--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.45.1",
     "react-icons": "^3.0.0",
+    "react-query": "^3.39.3",
     "react-scripts": "5.0.1",
     "typescript": "^4.6.3",
     "uuid": "^9.0.0",
